# Bloom-Wallet

./: .gitignore  README.md
bloom-wallet/: index.html  package-lock.json  package.json
bloom-wallet-landing-page/: CUSTOMIZATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  package-lock.json  pnpm-lock.yaml
bloom-wallet-landing-page/app/: globals.css  layout.tsx  page.tsx
bloom-wallet-landing-page/components/: header.tsx
bloom-wallet-landing-page/components/sections/: features-section.tsx  footer-section.tsx  hero-section.tsx
bloom-wallet/src/: App.jsx  index.css
bloom-wallet/src/components/: Cursor.jsx  HeroCanvas.jsx  Navbar.jsx  PhoneMockup.jsx
bloom-wallet/src/hooks/: useLenis.js  useScrollReveal.js
extension/: fix-extension.cjs  fix-extension.js  package-lock.json  package.json  vite.config.ts
extension/public/: manifest.json
extension/src/: popup.html
extension/src/popup/: App.tsx  (+1 more)
mobile/: .env.example  .gitignore  .npmrc  app.json  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/app/: _layout.tsx  onboarding.tsx
mobile/components/: BeneficiaryRow.tsx  NetworkBadge.tsx  ReceiveModal.tsx  WalletCard.tsx
mobile/constants/: network.ts
mobile/hooks/: useBiometric.ts  useWallet.ts  useWill.ts
mobile/utils/: shamir.ts  solana.ts  wallet.ts
programs/vaultis/: Cargo.toml
programs/vaultis/src/: errors.rs  lib.rs
programs/vaultis/src/instructions/: add_beneficiary.rs  check_in.rs  execute_will.rs  initialize_will.rs  mod.rs  revoke_will.rs
programs/vaultis/src/state/: mod.rs  will_account.rs
(+23 files in other folders)
