[package]
name = "vaultis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
steel = { version = "3.0", features = ["spl"] }
solana-program = "1.18"
bytemuck = { version = "1.14", features = ["derive"] }
num_enum = "0.7"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }

[profile.release]
overflow-checks = true
opt-level = 3
